--- a/simpleText.html
+++ b/simpleText.html
@@ -12,16 +12,18 @@
         <div id="myForm"></div>
         <!--
         Сделать:
-            - настройки стилей отображения (белое на черном, черное на белом)
-            - удаление слова перетаскиванием
-            - перемещение слова с сторе при переносе
-            - смена языка
-            - добавление фразы в "Любимое"
+            + удаление слова перетаскиванием
+            + перемещение слова с сторе при переносе
             - история изменений
             - обновление системы (автопредложение)
-            - добавление слова в словарь
-            - СЛОВАРИ
 
+            через куки:
+                - добавление фразы в "Любимое"
+                - СЛОВАРИ
+                - добавление слова в словарь
+                - настройки стилей отображения (белое на черном, черное на белом? размер шрифта)
+                - смена языка
+                
         -->
         <script type="text/javascript">
             init('#myForm');
