--- a/simpleText.html
+++ b/simpleText.html
@@ -6,27 +6,53 @@
         <link rel="stylesheet" href="css/main.css" type="text/css" media="all">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
         <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
+        <script src="/lib/jquery.storageapi.min.js"></script>
+        <script type="text/javascript" src="/js/main.js"></script>
+        <script type="text/javascript" src="/js/eventDispatcher.js"></script>
+        <script type="text/javascript" src="/js/commonFunctions.js"></script>
     </head>
     <body>
-        <div id="myForm"></div>
+        <div id="myForm">
+            <div class="leftPanelWr">
+                <div id="myTempl" class="btn">Мои шаблоны</div>
+            </div>
+            <div class="functWr">
+                <div id="delWord" class="btn" style="display: none;">Delete</div>
+            </div>
+            <ul id="myTextWr">
+            </ul>
+            <input type="text" id="myInput" value=""/>
+            <div class="finalBtnsWr">
+                <div id="clearText" class="btn unactive">Clear</div>
+                <div id="saveText" class="btn unactive" >Save</div>
+                <div id="showText" class="btn unactive">Show</div>
+            </div>
+            <div id="fullSizeWr" style="display: none;"></div>
+            <div id="messageWr"></div>            
+        </div>
         <!--
         Сделать:
             + удаление слова перетаскиванием
             + перемещение слова с сторе при переносе
-            - история изменений
-            - обновление системы (автопредложение)
+            + обновление системы (автопредложение)
 
             через куки:
                 - добавление фразы в "Любимое"
                 - СЛОВАРИ
                 - добавление слова в словарь
+                - подсказка при наборе
+
+            Меню "Настройки":
                 - настройки стилей отображения (белое на черном, черное на белом? размер шрифта)
                 - смена языка
-                
+
+
+        Вторая очередь:
+            - история изменений
         -->
+        <script id="hello" type="text/template"></script>
         <script type="text/javascript">
-            init('#myForm');
+            init();
         </script>
     </body>
 </html>
