--- a/simpleText.html
+++ b/simpleText.html
@@ -19,15 +19,18 @@
             <div class="functWr">
                 <div id="delWord" class="btn" style="display: none;">Delete</div>
             </div>
-            <ul id="myTextWr">
-            </ul>
+            <div id="myTextWr">
+            </div>
             <input type="text" id="myInput" value=""/>
             <div class="finalBtnsWr">
-                <div id="clearText" class="btn unactive">Clear</div>
-                <div id="saveText" class="btn unactive" >Save</div>
-                <div id="showText" class="btn unactive">Show</div>
+                <div id="clearText" class="btn disabled">Clear</div>
+                <div id="saveText" class="btn disabled" >Save</div>
+                <div id="showText" class="btn disabled">Show</div>
             </div>
-            <div id="fullSizeWr" style="display: none;"></div>
+            <div id="fullSizeWr" style="display: none;">
+                <div class="fullSizeExit">X</div>
+                <div class="fullSizeContent"></div>
+            </div>
             <div id="messageWr"></div>            
         </div>
         <!--
