--- a/simpleText.html
+++ b/simpleText.html
@@ -18,6 +18,7 @@
             <div class="leftPanelWr">
                 <div id="myTempl" class="btn"></div>
             </div>
+            <div id="mySettings" class="btn"></div>
             <div class="functWr">
                 <div id="delWord" class="btn" style="display: none;"></div>
             </div>
@@ -49,13 +50,16 @@
 
             Меню "Настройки":
                 - настройки стилей отображения (белое на черном, черное на белом? размер шрифта)
-                - смена языка
+                + смена языка
+                - О программе
+                - Обновить (с автопроверкой обновления)
 
 
         Вторая очередь:
             - история изменений
         -->
-        <script id="hello" type="text/template"></script>
+        <script id="settings" type="text/template">
+        </script>
         <script type="text/javascript">
             init();
         </script>
