--- a/simpleText.html
+++ b/simpleText.html
@@ -23,6 +23,7 @@
                 <div id="delWord" class="btn" style="display: none;"></div>
             </div>
             <div id="myTextWr">
+                <ul id="phraseWr"></ul>
             </div>
             <input type="text" id="myInput" value=""/>
             <div class="finalBtnsWr">
@@ -31,7 +32,7 @@
                 <div id="showText" class="btn disabled"></div>
             </div>
             <div id="fullSizeWr" style="display: none;">
-                <div class="fullSizeExit">X</div>
+                <div class="fullSizeExit" data-targ="writer">X</div>
                 <div class="fullSizeContent"></div>
             </div>
             <div id="messageWr"></div>            
